[package]
name = "nrcli"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argfile = "0.1.4"
clap = { version = "3.2.16", features = ["derive"] }
env_logger = "0.9.0"
evalexpr = "8.1.0"
flate2 = "1.0.24"
hostname = "0.3.1"
lexical = "6.1.1"
lexical-core = "0.8.5"
log = "0.4.17"
serde = "1.0.142"
serde_json = "1.0.83"
