[package]
name = "nrapm"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argfile = "0.1.4"
clap = { version = "3.2.16", features = ["derive"] }
env_logger = "0.9.0"
flate2 = "1.0.24"
hostname = "0.3.1"
kv = "0.23.1"
lexical = "6.1.1"
lexical-core = "0.8.5"
log = "0.4.17"
rhai = "1.8.0"
serde = "1.0.142"
serde_json = "1.0.83"
sysinfo = "0.25.1"
ureq = "2.5.0"
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
